recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:2: error: identifier expected but ':' found.
def hanoipair(height:Int, src:Int, other1:Int, other2:Int dst:Int) {
                                                             ^SplitHanoi1:30: error: ')' expected but '}' found.
}
^